; ModuleID = '/home/carl/AnghaBench/linux/drivers/nvme/target/extr_admin-cmd.c_nvmet_execute_async_event.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/nvme/target/extr_admin-cmd.c_nvmet_execute_async_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvmet_req = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.nvmet_ctrl* }
%struct.nvmet_ctrl = type { i64, i32, i32, %struct.nvmet_req** }

@NVMET_ASYNC_EVENTS = common dso_local global i64 0, align 8
@NVME_SC_ASYNC_LIMIT = common dso_local global i32 0, align 4
@NVME_SC_DNR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nvmet_execute_async_event(%struct.nvmet_req* %0) #0 {
  %2 = alloca %struct.nvmet_req*, align 8
  %3 = alloca %struct.nvmet_ctrl*, align 8
  store %struct.nvmet_req* %0, %struct.nvmet_req** %2, align 8
  %4 = load %struct.nvmet_req*, %struct.nvmet_req** %2, align 8
  %5 = getelementptr inbounds %struct.nvmet_req, %struct.nvmet_req* %4, i32 0, i32 0
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load %struct.nvmet_ctrl*, %struct.nvmet_ctrl** %7, align 8
  store %struct.nvmet_ctrl* %8, %struct.nvmet_ctrl** %3, align 8
  %9 = load %struct.nvmet_ctrl*, %struct.nvmet_ctrl** %3, align 8
  %10 = getelementptr inbounds %struct.nvmet_ctrl, %struct.nvmet_ctrl* %9, i32 0, i32 2
  %11 = call i32 @mutex_lock(i32* %10)
  %12 = load %struct.nvmet_ctrl*, %struct.nvmet_ctrl** %3, align 8
  %13 = getelementptr inbounds %struct.nvmet_ctrl, %struct.nvmet_ctrl* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @NVMET_ASYNC_EVENTS, align 8
  %16 = icmp sge i64 %14, %15
  br i1 %16, label %17, label %26

17:                                               ; preds = %1
  %18 = load %struct.nvmet_ctrl*, %struct.nvmet_ctrl** %3, align 8
  %19 = getelementptr inbounds %struct.nvmet_ctrl, %struct.nvmet_ctrl* %18, i32 0, i32 2
  %20 = call i32 @mutex_unlock(i32* %19)
  %21 = load %struct.nvmet_req*, %struct.nvmet_req** %2, align 8
  %22 = load i32, i32* @NVME_SC_ASYNC_LIMIT, align 4
  %23 = load i32, i32* @NVME_SC_DNR, align 4
  %24 = or i32 %22, %23
  %25 = call i32 @nvmet_req_complete(%struct.nvmet_req* %21, i32 %24)
  br label %42

26:                                               ; preds = %1
  %27 = load %struct.nvmet_req*, %struct.nvmet_req** %2, align 8
  %28 = load %struct.nvmet_ctrl*, %struct.nvmet_ctrl** %3, align 8
  %29 = getelementptr inbounds %struct.nvmet_ctrl, %struct.nvmet_ctrl* %28, i32 0, i32 3
  %30 = load %struct.nvmet_req**, %struct.nvmet_req*** %29, align 8
  %31 = load %struct.nvmet_ctrl*, %struct.nvmet_ctrl** %3, align 8
  %32 = getelementptr inbounds %struct.nvmet_ctrl, %struct.nvmet_ctrl* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = add nsw i64 %33, 1
  store i64 %34, i64* %32, align 8
  %35 = getelementptr inbounds %struct.nvmet_req*, %struct.nvmet_req** %30, i64 %33
  store %struct.nvmet_req* %27, %struct.nvmet_req** %35, align 8
  %36 = load %struct.nvmet_ctrl*, %struct.nvmet_ctrl** %3, align 8
  %37 = getelementptr inbounds %struct.nvmet_ctrl, %struct.nvmet_ctrl* %36, i32 0, i32 2
  %38 = call i32 @mutex_unlock(i32* %37)
  %39 = load %struct.nvmet_ctrl*, %struct.nvmet_ctrl** %3, align 8
  %40 = getelementptr inbounds %struct.nvmet_ctrl, %struct.nvmet_ctrl* %39, i32 0, i32 1
  %41 = call i32 @schedule_work(i32* %40)
  br label %42

42:                                               ; preds = %26, %17
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @nvmet_req_complete(%struct.nvmet_req*, i32) #1

declare dso_local i32 @schedule_work(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
